# Maximal-Clique-HashMap-Algorithm

./: .gitignore  CMakeLists.txt
config/: config.txt
include/: config.h  data_loader.h  maximal_clique_hashmap.h  miner.h  neighbor_graph.h  types.h  utils.h
src/: config.cpp  data_loader.cpp  main.cpp  maximal_clique_hashmap.cpp  miner.cpp  neighbor_graph.cpp  utils.cpp
